# vsomeip_qt

./: .gitignore  .gitmodules  README.md  Readme(in chinese).md
1_hello_world/: client  client.cpp  readme.md  readme.txt  server  server.cpp  vsomeip_client.json  vsomeip_server.json
2_dashboard/: CMakeLists.txt  readme.md
2_dashboard/config/: vsomeip_client.json
2_dashboard/include/: cluster.h  communication.h
2_dashboard/source/qml/: dashboard.qml
2_dashboard/src/: cluster.cpp  communication.cpp  main.cpp
3_vehicle_simulator/: CMakeLists.txt
3_vehicle_simulator/config/: vsomeip_server.json
3_vehicle_simulator/include/: communication.h
3_vehicle_simulator/src/: communication.cpp  mainwindow.cpp
Dashboard/VehicleSimulator/: VehicleSimulator.pro  communication.cpp
Dashboard/dashboard/: communication.cpp  dashboard.pro  v.json
